<resources>
    <string name="app_name">Instagram_CodePath</string>
    <string name="login_activity_submit">Login</string>
    <string name="login_activity_signup">Sign Up</string>
    <string name="login_activity_username">username</string>
    <string name="login_activity_password">password</string>
    <string name="post_activity_takePicture">Take Picture</string>
    <string name="post_activity_description">Description</string>
    <string name="post_activity_submit">Post</string>
    <string name="post_activity_logout">Log Out</string>
    <string name="profile_posts_header">Your Posts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>